testDeleteClusterWithoutAllOption is added.